# PyMKV

./: .gitignore  README.md  pyproject.toml
PyMKV/: constants.py  logger.py  mkveditor.py  pyproject.toml  renamer.py  wiki_scraper.py
PyMKV/.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
PyMKV/.devcontainer/lifecycle_scripts/: post_create.sh
PyMKV/PyMKV/: constants.py  logger.py  mkveditor.py  pymkv_runner.py  renamer.py  script.py  wiki_scraper.py
PyMKV/tests/data/: README.md  sample_mkv_output.json
tests/: data.json
