[tool.poetry]
name = "pymkv"
version = "0.1.0"
description = "MKV Toolbox via Python"
authors = ["Eric Ryu <ericryu19@gmail.com>"]
readme = "README.md"
packages = [{ include = "PyMKV" }]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.13.4"
pandas = "^2.3.0"
urllib3 = "^2.4.0"
poetry-core = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
