[tool.poetry]
name = "pymkv"
version = "0.1.0"
description = "MKV Toolbox via Python"
authors = ["Eric Ryu <ericryu19@gmail.com>"]
readme = "README.md"
packages = [{ include = "pymkv" }]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
urllib3 = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
